--- a/package.json
+++ b/package.json
@@ -1,16 +1,13 @@
 {
   "name": "volkan.io",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "volkan.io",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/v0lkan/volkan.io.git"
-  },
-  "author": "Volkan Özçelik",
+  "repository": "git+https://github.com/v0lkan/volkan.io.git",
+  "author": "Volkan Özçelik <me@volkan.io> (https://volkan.io/)",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/v0lkan/volkan.io/issues"
